[package]
name = "chia-caching-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
rustls-pemfile = "1"
rocksdb = "0.24.0"
blake3 = "1.8.2"
anyhow = "1.0.100"
