[package]
name = "chia-caching-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rustls-pemfile = "2"
rustls = "0.23"
rocksdb = "0.24.0"
blake3 = "1.8.2"
anyhow = "1.0.100"
hyper-rustls = "0.27.7"
serde_json = "1.0"
